# soupcxx

./: CMakeLists.txt  README.md  demo.cpp
api/: soupcxx.h
benchmark/: find_all_links.cpp  find_all_links.py  measure.py  parse_and_write.cpp  parse_and_write.py
data/: alice.html  alice_large.html
include/: utils.h
include/Nodes/: Node.h  Tag.h  Text.h
include/Soups/: HTMLSoup.h  Soup.h
src/Nodes/: Tag.cpp  Text.cpp
src/Soups/: HTMLSoup.cpp
